# at_mono

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  melos.yaml  pubspec.yaml
.allstar/: branch_protection.yaml
.github/: dependabot.yml  modules.json
.github/composite/: .gitignore
.github/composite/build-id/: action.yaml
.github/composite/get-melos-cache/: action.yaml
.github/composite/melos-bootstrap/: action.yaml
.github/composite/package-matrix/: action.yaml
.github/composite/retrieve-build-cache/: action.yaml
.github/composite/update-diagrams/: action.yaml
.github/composite/update-submodule/: action.yaml
.github/composite/update-submodules/: action.yaml
.github/workflows/: analysis.yaml  c-dart_interop-test.yaml  c-dart_interop_tests.yaml  daily-backup.yaml  daily-jobs.yaml  integration_tests.yaml  print_matrix.yaml  update-modules.yaml  weekly-jobs.yaml
analysis/: package_tree.ipynb  package_tree.py  requirements.txt
diagrams/: e2e_code_paths.md  e2ee_share_alice_bob.md
docs/: e2e_code_paths.md
docs/diagrams/: e2ee_share_alice_bob.md
tests/c_dart_interop_tests/: .gitignore  CMakeLists.txt  atchops.def  dll_install.sh  pubspec.yaml
tests/c_dart_interop_tests/atchops/: CMakeLists.txt
tests/c_dart_interop_tests/srv/: CMakeLists.txt  srv.def
tests/c_dart_interop_tests/test/: c_to_dart_test.dart  dart_to_c_test.dart
tools/: REPOS.sh  modules-add.sh  modules-update.sh  package_diagrams.py  package_diagrams.requirements.txt  postbootstrap.sh
